# afcen-digital-cto

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cto  cto.py  docker-compose.yml  generate_device.py  pyproject.toml  test_pr_agent.md  test_vulnerable.py
.github/workflows/: security.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
docker/age/: init.sql
docker/claude-code/: Dockerfile
docs/: ARCHITECTURE.md  CODING_AGENTS.md  JARVIS_INTEGRATION.md  MEETING_INTELLIGENCE.md  PHASE2_PLAN.md  PHASES.md  SUBAGENTS.md
src/: __init__.py  auth.py  config.py  database.py  health.py  logging_config.py  main.py  metrics.py  middleware.py  payment.py  retry.py  scheduler.py  utils.py  validation.py
src/integrations/: a2a_handler.py  github_client.py  github_graphql.py  jarvis_handler.py  openclaw_client.py
src/llm/: __init__.py  utils.py
src/memory/: knowledge_graph.py  postgres_store.py  qdrant_store.py  redis_store.py
src/models/: schemas.py
src/supervisor/: graph.py
src/tui/: __init__.py  backend_client.py  cli.py  main.py
tests/: conftest.py  test_a2a_protocol.py  test_architecture_advisor.py  test_code_review.py  test_coding_agent.py  test_devops_agent.py  test_e2e_coding.py  test_github_graphql.py  test_jarvis_handler.py  test_knowledge_graph.py  test_market_scanner.py  test_meeting_intelligence.py  test_memory.py  test_scheduler.py  test_sprint_planner_v2.py  test_supervisor.py  test_supervisor_phase4.py  test_webhook.py
tests/tui/: __init__.py  conftest.py  test_config.py  test_utils.py
(+53 files in other folders)
